--- a/reactjs/index.html
+++ b/reactjs/index.html
@@ -15,14 +15,12 @@
     <div id="content"></div>
 
     <script type="text/babel">
-        ReactDOM.render(
-            <h1>Hello, world!</h1>,
-            document.getElementById('content')
-        );
+ReactDOM.render(
+    <h1>Привет мир!</h1>,
+    document.getElementById('content')
+    
+);
     </script>
-
-
-
 
 </body>
 
