--- a/javascript/index.html
+++ b/javascript/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="/css/main.css">
     <title>Javascript</title>
 
 </head>
@@ -12,9 +13,41 @@
 <body>
 
     <button id="btn">Клик</button>
-    <div id="content"></div>
+    <div id="menu-wrap" class="menu-toggle">
+        <ul id="menu" class="menu">
+            <li>
+                <a href="#">Link 1</a>
+            </li>
+            <li>
+                <a href="#">Link 2</a>
+            </li>
+            <li>
+                <a href="#">Link 3</a>
+            </li>
+            <li>
+                <a href="#">Link 4</a>
+            </li>
+            <li>
+                <a href="#">Link 5</a>
+            </li>
+        </ul>
+    </div>
 
     <script src="/js/main.js"></script>
+    <script>
+        var btn = document.querySelector('#btn'),
+            menu = document.querySelector('.menu'),
+            mwrap = document.querySelector('#menu-wrap');
+
+        btn.addEventListener('click', function () {
+            menu.classList.toggle('open');
+        });
+        btn.addEventListener('click', function () {
+            mwrap.classList.toggle('open');
+        });
+
+    </script>
+
 </body>
 
 </html>
