addi new folder

--- a/javascript/index.html
+++ b/javascript/index.html
@@ -35,16 +35,12 @@
 
     <script src="/js/main.js"></script>
     <script>
-        var btn = document.querySelector('#btn'),
-            menu = document.querySelector('.menu'),
-            mwrap = document.querySelector('#menu-wrap');
+var btn = document.querySelector('#btn'),
+    menu = document.querySelector('.menu');
 
-        btn.addEventListener('click', function () {
-            menu.classList.toggle('open');
-        });
-        btn.addEventListener('click', function () {
-            mwrap.classList.toggle('open');
-        });
+    btn.addEventListener('click', function () {
+        menu.classList.toggle('open');
+    });
 
     </script>
 
