--- a/html/recstudio-ro/index.html
+++ b/html/recstudio-ro/index.html
@@ -345,7 +345,7 @@
     </div>
     <div>
 
-        <!-- Nextend Smart Slider 3 #1 - BEGIN 
+        <!-- Nextend Smart Slider 3 #1 - BEGIN -->
         <div id="n2-ss-1-align" class="n2-ss-align">
             <div class="n2-padding">
                 <div id="n2-ss-1" class="n2-ss-slider n2notransition n2-ss-load-fade " data-minFontSizedesktopPortrait="1" data-minFontSizedesktopLandscape="1"
@@ -620,7 +620,7 @@
             <img style="width: 100%; max-width:3000px;" class="n2-ow" src="data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZlcnNpb249IjEuMCIgd2lkdGg9IjE1MDAiIGhlaWdodD0iNzAwIiA+PC9zdmc+"
                 alt="Slider" />
         </div>
-        Nextend Smart Slider 3 #1 - END -->
+        <!--Nextend Smart Slider 3 #1 - END -->
     </div>
     <main>
         <section id="about">
