--- a/html/recstudio-ro/index.html
+++ b/html/recstudio-ro/index.html
@@ -351,11 +351,11 @@
                 <div id="n2-ss-1" class="n2-ss-slider n2notransition n2-ss-load-fade " data-minFontSizedesktopPortrait="1" data-minFontSizedesktopLandscape="1"
                     data-minFontSizetabletPortrait="1" data-minFontSizetabletLandscape="1" data-minFontSizemobilePortrait="1"
                     data-minFontSizemobileLandscape="1" style="font-size: 16px;" data-fontsize="16">
-                    <div class="n2-ss-slider-1" style="">
+                    <div class="n2-ss-slider-1">
                         <div class="n2-ss-slider-2">
                             <div class="n2-ss-background-animation"></div>
-                            <div class="n2-ss-slider-3" style="">
-                                <div data-slide-duration="0.008" data-id="1" class="n2-ss-slide n2-ss-canvas  n2-ss-slide-active n2-ss-slide-1" style="">
+                            <div class="n2-ss-slider-3">
+                                <div data-slide-duration="0.008" data-id="1" class="n2-ss-slide n2-ss-canvas  n2-ss-slide-active n2-ss-slide-1">
                                     <div data-hash="3b098817f145b688346e11514e6a2e19" data-desktop="images/fn.jpeg" style="background-color: #000000;background-color: RGBA(0,0,0,0.75);"
                                         class="n2-ss-slide-background" data-opacity="1">
                                         <div class="n2-ss-slide-background-image n2-ss-slide-tile" style="background-image: url(images/fn.jpeg);opacity:1;background-position: 50% 50%;"></div>
@@ -364,7 +364,7 @@
                                         playsinline="playsinline" webkit-playsinline="webkit-playsinline">
                                         <source src="/images/slideshow/video/slsider.mp4" type="video/mp4">
                                     </video>
-                                    <div class="n2-ss-layers-container" style="">
+                                    <div class="n2-ss-layers-container">
                                         <div class="n2-ss-layer" style="z-index:1;overflow:visible;text-align:center;left:40px;top:225px;width:auto;height:auto;"
                                             data-animations="eyJzcGVjaWFsWmVybyI6MCwidHJhbnNmb3JtT3JpZ2luIjoiNTB8Knw1MHwqfDAiLCJpbiI6W3sibmFtZSI6Ilx1MDQxN1x1MDQzMFx1MDQ0Mlx1MDQzNVx1MDQzY1x1MDQzZFx1MDQzNVx1MDQzZFx1MDQzOFx1MDQzNSIsImR1cmF0aW9uIjozLCJkZWxheSI6Miwib3BhY2l0eSI6MH1dfQ=="
                                             data-class="" data-rotation="0" data-parallax="1" data-adaptivefont="1" data-generatorvisible=""
@@ -719,7 +719,7 @@
                     <iframe src="https://player.vimeo.com/video/239230318" width="100%" height="150" frameborder="0" webkitallowfullscreen mozallowfullscreen
                         allowfullscreen></iframe>
                 </div>
-                <div class="item">
+                <!-- <div class="item">
                     <iframe src="https://player.vimeo.com/video/239230318" width="100%" height="150" frameborder="0" webkitallowfullscreen mozallowfullscreen
                         allowfullscreen></iframe>
                 </div>
@@ -730,7 +730,7 @@
                 <div class="item">
                     <iframe src="https://player.vimeo.com/video/239230318" width="100%" height="150" frameborder="0" webkitallowfullscreen mozallowfullscreen
                         allowfullscreen></iframe>
-                </div>
+                </div> -->
 
             </div>
             <div class="customs-controls">
